# py-game-of-life

./: .gitignore  Dockerfile  README.md  main.py  main_simulation.py  main_text.py  pyproject.toml  run_simulated_animation.py  run_text_game.py
app/: animation.py  animation_obj.py  board.py  board1d.py  cell.py  display.py  game_loop.py  main.py  text_display.py  user_input.py
app/components/: board.py  board1d.py  board2d.py  cell.py  display.py  game_loop.py  grid.py
app/core/: cfg.py
conf/: start.sh  test_runner.sh
tests/: test_board_3x3.py  test_board_3x5.py  test_board_4x4.py  test_board_5x3.py
tests/integration/board/: test_board_3x3.py  test_board_4x4.py  test_board_5x3.py
tests/integration/board1d/: test_board_3x3.py  test_board_3x5.py  test_board_4x4.py  test_board_5x3.py
tests/integration/board2d/: test_board_3x3.py  test_board_3x5.py  test_board_4x4.py  test_board_5x3.py
tests/unit/: test_cfg.py
