[tool.poetry]
name = "py-game-of-life"
version = "0.1.0"
description = "Poetry specification for library dependencies"
authors = ["Kyle Clark <github.com/kyleaclark>"]

[tool.poetry.dependencies]
python = "3.11.1"
matplotlib = "~3.6.2"
numpy = "~1.23.5"

[tool.poetry.dev-dependencies]
pytest = "~7.2.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"